# merlin

./: CHANGES.md  merlin.opam
.github/workflows/: emacs-lint.yml  fuzzy-ci-privileged.yml  fuzzy-ci.yml  main.yml  nix.yml  ocaml-lsp-compat.yml
emacs/: merlin.el
src/analysis/: completion.ml  construct.ml  destruct.ml  locate.ml  locate_types.ml  occurrences.ml  ptyp_of_type.ml  type_utils.ml  typedtree_utils.ml
src/commands/: new_commands.ml  query_json.ml
src/config/: gen_config.ml
src/frontend/: dune  query_commands.ml  query_protocol.ml
src/kernel/: extension.ml  extension.mli  mbrowse.ml  mpipeline.ml  mppx.ml  mreader_lexer.ml  mreader_parser.ml  mtyper.ml
src/ocaml/merlin_specific/: browse_raw.ml  browse_raw.mli
src/ocaml/parsing/: ast_helper.ml  ast_helper.mli  ast_iterator.mli  ast_mapper.ml  ast_mapper.mli  location.ml  location.mli  parsetree.mli  pprintast.ml  printast.ml  unit_info.ml
src/ocaml/preprocess/: lexer_raw.mll  parse.ml  parse.mli  parser_printer.ml  parser_raw.ml  parser_raw.mli  parser_raw.mly  parser_recover.ml
src/ocaml/typing/: btype.ml  btype.mli  cmi_format.ml  cmi_format.mli  dune  (+56 more)
src/sherlodoc/: dune  name_cost.ml  name_cost.mli  query_parser.ml  query_parser.mli  search.ml  type_distance.ml  type_distance.mli  type_expr.ml  type_expr.mli  type_expr_util.ml  type_expr_util.mli  type_lexer.mll  type_parser.mly
src/utils/: std.ml
tests/test-dirs/: function-recovery.t  outline-recovery.t  typing-recovery.t
upstream/: gen_patch.sh
upstream/ocaml_505/: base-rev.txt
upstream/ocaml_506_typing_recovery/: base-rev.txt
(+457 files in other folders)
